Removing theme support for align wide because it is not working correctly and I have other priorities right now other than fixing it. Tweaking the column blocks display on small screens

--- a/scss/_image-link-columns-blocks.scss
+++ b/scss/_image-link-columns-blocks.scss
@@ -100,8 +100,20 @@
 @media (max-width: 47.999em) {
 	.linkColumns {
 		flex-direction: column;
+		.column {
+			flex: unset;
+		}
 		.permalink {
 			padding: 0;
+		}
+		.column-image {
+			width: 100%;
+			height: auto;
+		}
+		&.title {
+			.column-image {
+				max-width: 100%;
+			}
 		}
 	}
 }
